refactor: teste com AOT